[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/humanoidmodelbase.png" type="Texture" id=1]
[ext_resource path="res://scene/charactermodel/Humanoid.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "IDLE"

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Torso/Arm/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -9.53674e-07 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "WALK"

[node name="Humanoid" type="Node2D"]
script = ExtResource( 2 )

[node name="Torso" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
offset = Vector2( -0.5, 0.5 )
region_enabled = true
region_rect = Rect2( 0, 20, 7, 9 )

[node name="Arm" type="Node2D" parent="Torso"]
position = Vector2( 0, 2 )

[node name="Hand1" type="Sprite" parent="Torso/Arm"]
position = Vector2( 0, -9.53674e-07 )
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( -0.5, 0.5 )
region_enabled = true
region_rect = Rect2( 6, 32, 5, 5 )

[node name="Hand2" type="Sprite" parent="Torso/Arm"]
position = Vector2( 0, -9.53674e-07 )
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( -0.5, 0.5 )
region_enabled = true
region_rect = Rect2( 6, 32, 5, 5 )

[node name="Head" type="Sprite" parent="Torso"]
position = Vector2( -1, -8 )
texture = ExtResource( 1 )
offset = Vector2( 0, -0.5 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 9 )

[node name="Hair" type="Sprite" parent="Torso/Head"]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
offset = Vector2( -0.5, -0.5 )
region_enabled = true
region_rect = Rect2( 0, 9, 13, 11 )

[node name="Legs" type="Node2D" parent="."]

[node name="Foot1" type="Sprite" parent="Legs"]
z_index = 10
texture = ExtResource( 1 )
offset = Vector2( 0, -1.5 )
region_enabled = true
region_rect = Rect2( 0, 29, 4, 3 )

[node name="Foot2" type="Sprite" parent="Legs"]
z_index = -10
texture = ExtResource( 1 )
offset = Vector2( 0, -1.5 )
region_enabled = true
region_rect = Rect2( 0, 29, 4, 3 )

[node name="TempCamera" type="Camera2D" parent="."]
current = true

[node name="AnimationHandler" type="AnimationPlayer" parent="."]
anims/IDLE = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/WALK = SubResource( 3 )

[connection signal="animation_finished" from="AnimationHandler" to="." method="_on_AnimationHandler_animation_finished"]
